[package]
name = "diesel-dynamic-schema"
version = "1.0.0"
authors = ["Sean Griffin <sean@seantheprogrammer.com>"]
license = "MIT OR Apache-2.0"
autotests = false

[dependencies]
diesel = { version = "1.4.2", default-features = false }

[dev-dependencies]
dotenv = "0.14"

[[example]]
name = "querying_basic_schemas"
path = "examples/querying_basic_schemas.rs"
required-features = ["diesel/sqlite"]

[[example]]
name = "querying_multiple_types"
path = "examples/querying_multiple_types.rs"
required-features = ["diesel/sqlite"]

[[example]]
name = "columns_used_in_where_clause"
path = "examples/columns_used_in_where_clause.rs"
required-features = ["diesel/sqlite"]

[[test]]
name = "integration_tests"
path = "tests/lib.rs"
harness = true
#required-features = ["diesel/sqlite"]

[features]
postgres = ["diesel/postgres"]
sqlite = ["diesel/sqlite"]
mysql = ["diesel/mysql"]


[patch.crates-io]
diesel = {git = "https://github.com/GiGainfosystems/diesel", rev = "a2fa45726d64f09dd256102f927ca22c4272c2d9"}
diesel_derives = {git = "https://github.com/GiGainfosystems/diesel", rev = "a2fa45726d64f09dd256102f927ca22c4272c2d9"}
